# brews.gadom.ski

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy-frontend.yaml  deploy-frontend.yml
frontend/: .gitignore  .pnp.cjs  .prettierignore  .prettierrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: CNAME
frontend/src/: App.tsx  api.test.ts  api.ts  constants.ts  main.tsx
frontend/src/api/: client.ts  index.ts  schema.ts
frontend/src/components/: Beers.tsx  BrewsIcon.tsx  Header.tsx
frontend/src/hooks/: useBeers.ts
infra/: README.md  app.py  brews_stack.py  pyproject.toml  test_stack.py
infra/src/brews_infra/: __init__.py
src/brews/: __init__.py  app.py  cli.py  config.py  db.py  extract.py  handler.py  images.py  models.py  routes.py  settings.py  storage.py
tests/: conftest.py  test_app.py  test_config.py  test_db.py  test_extract.py  test_images.py  test_models.py  test_storage.py
