[project]
name = "brews"
version = "0.0.0"
description = "Shoes and Brews beer list"
readme = "README.md"
authors = [
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "boto3>=1.43.36",
    "fastapi>=0.138.0",
    "pillow>=11.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
]

[project.scripts]
brews = "brews.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "botocore[crt]>=1.43.36",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "types-boto3[essential]>=1.43.36",
    "uvicorn>=0.49.0",
]
