[project]
name = "brews-infra"
version = "0.0.0"
description = "CDK infrastructure for the Brews backend"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
]

[dependency-groups]
dev = ["pytest>=9.0.0"]

[tool.pytest.ini_options]
testpaths = ["test_stack.py"]
